unreleased
==========

- Fixed bug in `proutes` such that it now shows the correct view when a class
  and `attr` is involved.
  See: https://github.com/Pylons/pyramid/pull/2687


.. _changes_1.6.1:

1.6.1 (2016-02-02)
==================

Deprecations
------------

- Missed the deprecation of one more daemon/process management feature that
  allowed logging to a file. This deprecates ``--log-file`` which is generally
  only used with pserve running in daemon mode. See
  https://github.com/Pylons/pyramid/pull/2330

Bug Fixes
---------

- Fix an issue with differing CSRF token data types on Python runtimes
  supporting ``hmac.compare_digest``.
  See https://github.com/Pylons/pyramid/pull/2299

1.6 (2016-01-03)
================

Deprecations
------------

- Continue removal of ``pserve`` daemon/process management features
  by deprecating ``--user`` and ``--group`` options.
  See https://github.com/Pylons/pyramid/pull/2190

1.6b3 (2015-12-17)
==================

Backward Incompatibilities
--------------------------

- Remove the ``cachebust`` option from ``config.add_static_view``. See
  ``config.add_cache_buster`` for the new way to attach cache busters to
  static assets.
  See https://github.com/Pylons/pyramid/pull/2186

- Modify the ``pyramid.interfaces.ICacheBuster`` API to be a simple callable
  instead of an object with ``match`` and ``pregenerate`` methods. Cache
  busters are now focused solely on generation. Matching has been dropped.

  Note this affects usage of ``pyramid.static.QueryStringCacheBuster`` and
  ``pyramid.static.ManifestCacheBuster``.

  See https://github.com/Pylons/pyramid/pull/2186

Features
--------

- Add a new ``config.add_cache_buster`` API for attaching cache busters to
  static assets. See https://github.com/Pylons/pyramid/pull/2186

Bug Fixes
---------

- Ensure that ``IAssetDescriptor.abspath`` always returns an absolute path.
  There were cases depending on the process CWD that a relative path would